--- a/linear-regression.Rmd
+++ b/linear-regression.Rmd
@@ -4,3 +4,33 @@ author: "Gustavo Monteiro"
 date: "October 3, 2018"
 output: html_document
 ---
+
+```{r warning=FALSE, echo=FALSE, message=FALSE}
+library(readr)
+library(here)
+```
+
+```{r}
+eleicoes_data <- read_csv(
+  here('./eleicoes_2006_e_2010.csv'), 
+  local=readr::locale("br"),
+  col_types = cols(
+    ano = col_integer(),
+    sequencial_candidato = col_character(),
+    quantidade_doacoes = col_integer(),
+    quantidade_doadores = col_integer(),
+    total_receita = col_double(),
+    media_receita = col_double(),
+    recursos_de_outros_candidatos.comites = col_double(),
+    recursos_de_pessoas_fisicas = col_double(),
+    recursos_de_pessoas_juridicas = col_double(),
+    recursos_proprios = col_double(),
+    `recursos_de_partido_politico` = col_double(),
+    quantidade_despesas = col_integer(),
+    quantidade_fornecedores = col_integer(),
+    total_despesa = col_double(),
+    media_despesa = col_double(),
+    votos = col_integer(),
+    .default = col_character()))
+```
+
