--- a/linear-regression.Rmd
+++ b/linear-regression.Rmd
@@ -351,3 +351,82 @@ glance(model_2010)
 
 Vemos que, para os dados de 2010, o modelo com todas as variáveis se torna um pouco mais representativo,
 explicando cerca de 63% da mudança nos dados, e com um R² ajustado bem próximo disso, então acho que podemos considerar que o modelo com todas as variáveis não seria válido para esses dados.
+
+Pórem, uma análise embasada somento no R² e R² ajustado pode estar nos levando a uma opinião muito inocente sobre o modelo,
+então, a seguir, faremos uma série de outras análises em cima do modelo, para podermos ter uma opinião mais fortemente embasado sobre sua eficacia.
+
+```{r}
+# preditores com p valor alto
+tidy(model_2006, 
+     conf.int = TRUE, 
+     conf.level = 0.97) %>%
+  top_n(3, p.value) %>% 
+  ggplot(aes(reorder(term, p.value), p.value)) +
+  geom_point() +
+  labs(x = "Predictor variable",
+       y = "Estimated value (97% of confidence)")
+
+# preditores com um p valor baixo
+tidy(model_2006, 
+     conf.int = TRUE, 
+     conf.level = 0.97,
+     sep=":") %>%
+  arrange(p.value) %>%
+  slice(1:3) %>%
+  ggplot(aes(reorder(term,p.value), p.value)) +
+  geom_hline(yintercept = 0.05, colour = "darkred") +
+  geom_point(size = 2) +
+  labs(x = "Predictor variable",
+       y = "Estimated value (95% of confidence)")
+```
+
+Análise de resuduos
+
+```{r}
+model_2006 %>%
+  ggplot(aes(.fitted, .resid)) + 
+  geom_point() +
+  stat_smooth(method="loess") + 
+  geom_hline(col="red",
+             yintercept=0,
+             linetype="dashed") + 
+  labs(y="Residuals",
+       x="Fitted values",
+       title="Residual vs Fitted Plot (2006 elections)")
+
+model_2010 %>%
+  ggplot(aes(.fitted, .resid)) + 
+  geom_point() +
+  stat_smooth(method="loess") + 
+  geom_hline(col="red",
+             yintercept=0,
+             linetype="dashed") + 
+  labs(y="Residuals",
+       x="Fitted values",
+       title="Residual vs Fitted Plot (2006 elections)")
+```
+
+
+```{r}
+model_2006 %>%
+  ggplot(aes(.fitted, 
+             sqrt(abs(.stdresid)))) + 
+  geom_point(na.rm=TRUE) + 
+  stat_smooth(method="loess",
+              na.rm = TRUE) +
+  labs(title = "Scale-Location (2006 elections)",
+       x= "Fitted Value",
+       y = expression(sqrt("|Standardized residuals|")))
+```
+
+```{r}
+model_2006 %>%
+  ggplot(aes(.hat, .stdresid)) + 
+  geom_point(aes(size=.cooksd), na.rm=TRUE) +
+  stat_smooth(method="loess", na.rm=TRUE) +
+  xlab("Leverage")+ylab("Standardized Residuals") + 
+  ggtitle("Residual vs Leverage Plot (2006 elections)") + 
+  scale_size_continuous("Cook's Distance", range=c(1,5)) +    
+  theme(legend.position="bottom")
+```
+
